# xmodem

./: .gitignore  CMakeLists.txt  README.md  Sprawozdanie.doc  main.cpp  telekom3_huffman.doc
include/: DataBlock.h  PortHandler.h  defines.h
include/FileHandler/: PortHandler.h  defines.h
resources/: receive123.txt
src/: PortHandler.cpp
src/FileHandler/: PortHandler.cpp
